--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -38,6 +38,7 @@
     <a href="/javascript" >JavaScript</a> |
     <a href="/objective-c" >Objective-C</a> |
     <a href="/clojure" >Clojure</a> |
+    <a href="/css" >CSS</a> |
     <a href="/r" >R</a>
   </div>
 
