--- a/app/assets/stylesheets/application_lp.css.scss
+++ b/app/assets/stylesheets/application_lp.css.scss
@@ -22,8 +22,7 @@ $text_link:  #669acb;
 $text_hover: #a0b8cf;
 
 @import "bootstrap.css.scss";
-@import "bootstrap_responsive.css";
-@import "bootstrap_upload.css";
+@import "bootstrap_responsive.css.scss";
 @import "font-awesome.css.scss";
 @import "sprite.css.scss";
 @import "colorschema.css.scss";
