--- a/app/views/users/_signup_form.html.erb
+++ b/app/views/users/_signup_form.html.erb
@@ -62,7 +62,7 @@
     <div class="control-group">
       <div class="control-label"></div>
       <div class="controls">
-        <button type="submit" class="btn btn-large btn-primary" ><%= t(:page_signup_button_signup) %></button>
+        <button type="submit" class="btn btn-large" ><%= t(:page_signup_button_signup) %></button>
       </div>
     </div>
 
