--- a/app/views/products/helpers/_how.erb
+++ b/app/views/products/helpers/_how.erb
@@ -15,7 +15,7 @@
       <div class="span9">
         <h5 class="integration_header"> GitHub </h5>
         <p >
-          <a href='<%= Settings.instance.github_base_url %>/login/oauth/authorize?client_id=50fb47103b8a3f03b2cd'>Login with your GitHub account</a>
+          <a href='<%= Settings.instance.github_base_url %>/login/oauth/authorize?client_id=<%=Settings.instance.github_client_id%>&amp;scope=user:email'>Login with your GitHub account</a>
           and turn on the switch beside the project file you want to monitor. VersionEye will notify you about outdated dependencies via email.
         </p>
         <p>
