--- a/app/views/shared/_github_ad.html.erb
+++ b/app/views/shared/_github_ad.html.erb
@@ -5,7 +5,7 @@
     Get notified about outdated dependencies
     in your project.
   </p>
-  <a href='<%= Settings.instance.github_base_url %>/login/oauth/authorize?client_id=50fb47103b8a3f03b2cd' style="margin-right: 5px;" >
+  <a href='<%= Settings.instance.github_base_url %>/login/oauth/authorize?client_id=<%=Settings.instance.github_client_id%>&amp;scope=user:email' style="margin-right: 5px;" >
     <span class="btn btn-large btn-primary">Login with GitHub</span>
   </a>
 </div>
