--- a/app/views/user/github_repos/init.html.erb
+++ b/app/views/user/github_repos/init.html.erb
@@ -27,7 +27,7 @@
       <div class="span8 content flash warning" >
          With the current scope VersionEye can only fetch your public repositories.
          If you want VersionEye to monitor your private repositories, you need to grant VersionEye access:<br/><br/>
-         <a href='<%= Settings.instance.github_base_url %>/login/oauth/authorize?client_id=50fb47103b8a3f03b2cd&amp;scope=repo,user:email' style="margin-right: 5px;" >
+         <a href='<%= Settings.instance.github_base_url %>/login/oauth/authorize?client_id=<%=Settings.instance.github_client_id%>&amp;scope=repo,user:email' style="margin-right: 5px;" >
            Grant access to private repositories
          </a><br/><br/>
          Unfortunately, GitHub doesn't have a read-only scope for private repositories currently.
