--- a/app/assets/stylesheets/application_lp.css.scss
+++ b/app/assets/stylesheets/application_lp.css.scss
@@ -37,5 +37,5 @@ $text_hover: #a0b8cf;
 @import "landing_page.css.scss";
 
 @import "layout.css.scss";
-@import "typeahead.js-bootstrap.css";
-@import "social-buttons.css";
+@import "typeahead.js-bootstrap.css.scss";
+@import "social-buttons.css.scss";
