Refactor Landing Page

--- a/app/assets/stylesheets/application_lp.css.scss
+++ b/app/assets/stylesheets/application_lp.css.scss
@@ -11,8 +11,8 @@ $link_color: #7575FF;
 
 /* $text_yellow: #FBB21C; */
 
-$text_yellow: gray;
-$text_casual: #616970;
+$text_yellow: black;
+$text_casual: black;  /* #616970 */
 
 $link_hover:   #FBB21C;
 $link_color:   #FDFDFD;
