--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,8 +5,8 @@
 
   <div class="l_lp_well_margin" >
     <div style="text-align: center;">
-      <h1 class="casual ">Notification System for Software Libraries</h1>
-      <h2 class="casual ">Because software libraries don't update themselves</h2>
+      <h1>Notification System for Software Libraries</h1>
+      <h2 class="casual">Because software libraries don't update themselves</h2>
     </div>
     <div style="margin-top: 33px;">
       <% if @ab.eql?("a") %>
@@ -19,21 +19,21 @@
 
 </div>
 
-<div id="what_is_versioneye" class="container">
+<!-- <div id="what_is_versioneye" class="container">
   <div class="well-white l_lp_well_margin" >
     <%= render "/products/helpers/what_is_versioneye" %>
+  </div>
+</div> -->
+
+<div id="integration" class="container">
+  <div class="well-white l_lp_well_margin" >
+    <%= render "/products/helpers/how" %>
   </div>
 </div>
 
 <div id="reasons" class="container" >
   <div class="well-white l_lp_well_margin">
     <%= render "/products/helpers/why" %>
-  </div>
-</div>
-
-<div id="integration" class="container">
-  <div class="well-white l_lp_well_margin" >
-    <%= render "/products/helpers/how" %>
   </div>
 </div>
 
