--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,7 +12,7 @@ $link_color: #7575FF;
 /* $text_yellow: #FBB21C; */
 
 $text_yellow: gray;
-$text_casual: #616970;
+$text_casual: black;  /* #616970 */
 
 $link_hover:   #FBB21C;
 $link_color:   #FDFDFD;
