--- a/app/views/products/helpers/_how.erb
+++ b/app/views/products/helpers/_how.erb
@@ -2,40 +2,33 @@
 <div class="row" >
   <div class="span10 l_padding_surround" >
 
-    <h2 class="no_margin" > How? </h2>
-
-    <p class="l_padding_top">
-      VersionEye has different ways to monitor your dependencies and to keep you informed.
-    </p>
-
     <div class="row l_padding_top">
       <div class="span1 integration_icon" >
         <span class="icon_gitcat" style="margin-left: -10px"></span>
       </div>
       <div class="span9">
-        <h5 class="integration_header"> GitHub </h5>
+        <h4 class="integration_header"> GitHub </h4>
         <p >
           <a href='<%= Settings.instance.github_base_url %>/login/oauth/authorize?client_id=<%=Settings.instance.github_client_id%>&amp;scope=user:email'>Login with your GitHub account</a>
           and turn on the switch beside the project file you want to monitor. VersionEye will notify you about outdated dependencies via email.
         </p>
         <p>
-          <%= image_tag "marketing/github_integration.png" %>
+          <%= image_tag "marketing/github_integration.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray" %>
+          =>
+          <%= image_tag "marketing/versioneye_project.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray; width: 450px;" %>
         </p>
         <p class="l_padding_top">
           VersionEye shows you all supported project files in all branches for all of your repositories. After parsing your project file you can immediately see which dependencies are outdated.
         </p>
-        <p>
-          <%= image_tag "marketing/versioneye_project.png" %>
-        </p>
       </div>
     </div>
 
-    <div class = "row l_padding_top">
+    <div class="row l_padding_top">
       <div class="span1 integration_icon" >
-        <span style="font-size: 50px;"><i class = "icon-bitbucket"></i></span>
+        <span class = "icon-bitbucket" style="font-size: 50px; color: gray;"></span>
       </div>
-      <div class =  "span9">
-        <h5 class="integration_header"> Bitbucket </h5>
+      <div class="span9">
+        <h4 class="integration_header"> Bitbucket </h4>
         <p class="integration_desc">
           <a href='<%= auth_bitbucket_signin_url %>'>Login with your Bitbucket account</a> and turn on the switch beside the project file you want to monitor.
           Our Bitbucket integration works exactly like the GitHub integration. The only difference is that we only show supported project files in the root of a branch. Project files in subdirectories are currently not displayed.
@@ -48,7 +41,7 @@
         <span class = "icon_www"></span>
       </div>
       <div class = "span9">
-        <h5 class="integration_header"> URL </h5>
+        <h4 class="integration_header"> URL </h4>
         <p class="integration_desc">
           Let VersionEye know where your project file is located on the Internet
           and it will fetch it every day and notify you about outdated
@@ -61,7 +54,7 @@
         <span class = "icon_upload"></span>
       </div>
       <div class="span9">
-        <h5 class="integration_header"> Upload </h5>
+        <h4 class="integration_header"> Upload </h4>
         <p class="integration_desc">
           Just upload your project file and VersionEye will
           show you the outdated dependencies.
