--- a/app/views/products/helpers/_why.html.erb
+++ b/app/views/products/helpers/_why.html.erb
@@ -1,19 +1,14 @@
-<div class="row" >
-  <div class="span10 l_padding_surround" >
-    <h2 class="no_margin" > Why? </h2>
-  </div>
-</div>
 
 <div class="marketing" >
-  <h2 class="casual">Because software libraries don't update themselves</h2>
+  <h2>Because software libraries don't update themselves</h2>
   <p>They just become out-dated!</p>
 </div>
 <div class="marketing" >
-  <h2 class="casual">Because software libraries are not like iPhone apps</h2>
+  <h2>Because software libraries are not like iPhone apps</h2>
   <p>They are passive! They don't tell you that they are out-dated!</p>
 </div>
 <div class="marketing" >
-  <h2 class="casual">Because software developers are wasting time with ...</h2>
+  <h2>Because software developers are wasting time with ...</h2>
   <p>looking manually for updates. Save time and money by automating this process.</p>
 </div>
 
