--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,7 +39,7 @@ $text_hover: #a0b8cf;
 @import "footer.css.scss";
 
 @import "main.css.scss";
-@import "typeahead.js-bootstrap.css";
+@import "typeahead.js-bootstrap.css.scss";
 @import "social-buttons.css.scss";
 @import "product.css.scss";
 @import "user.css.scss";
