Optimize Titles for Node.JS

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <% elsif @product.language.eql?('Java') %>
       <title><%= @product.name %> : <%= @product.version %> - Track your JARs at VersionEye</title>
     <% elsif @product.language.eql?('Node.JS') %>
-      <title><%= @product.name %> : <%= @product.version %> - Track your NPM libraries at VersionEye</title>
+      <title><%= @product.name %> : <%= @product.version %> - Track your Node.JS libraries at VersionEye</title>
     <% elsif @product.language.eql?('PHP') %>
       <title><%= @product.name %> : <%= @product.version %> - Track your PHP libraries at VersionEye</title>
     <% else %>
