--- a/app/views/products/_product_show_dependencies_maven2.html.erb
+++ b/app/views/products/_product_show_dependencies_maven2.html.erb
@@ -8,7 +8,7 @@
         <% if main_dependencies && main_dependencies.count %>
   			  <%= pluralize( main_dependencies.count, 'Compile Dependencies') %>
         <% else %>
-          0 Compile Dependencies
+          0 compile dependencies found
         <% end %>
   		</h5>
   	</div>
