Add License Whitelist UI

--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -10,6 +10,7 @@
     <li><%= link_to 'CocoaPods Specs'    , settings_cocoapods_path %></li>
     <li><%= link_to 'Sonatype Nexus'     , settings_nexussettings_path %></li>
     <li><%= link_to 'E-Mails'            , settings_emails_path %></li>
+    <li><%= link_to 'License Whitelists' , settings_license_whitelists_path %></li>
     <li><%= link_to 'Connect'            , settings_connect_path %></li>
     <li><%= link_to 'Password'           , settings_password_path %></li>
   <% else %>
@@ -23,6 +24,7 @@
       <li><%= link_to 'Billing Address'    , settings_billing_path %></li>
     <% end %>
 
+    <li><%= link_to 'License Whitelists' , settings_license_whitelists_path %></li>
     <li><%= link_to 'Connect'            , settings_connect_path %></li>
     <li><%= link_to 'Password'           , settings_password_path %></li>
     <li><%= link_to 'Notification Center', settings_notifications_path %></li>
