Little UI Improvement

--- a/app/views/settings/license_whitelists/show.html.erb
+++ b/app/views/settings/license_whitelists/show.html.erb
@@ -6,7 +6,7 @@
 <div class="span8" >
 
   <div class="row content_header_def" >
-    License Whitelist <b><%= @license_whitelist %></b>
+    License Whitelist <b>"<%= @license_whitelist %>"</b>
   </div>
 
   <div class="span8 content" >
