Display name substitute in whitelist

--- a/app/views/settings/license_whitelists/show.html.erb
+++ b/app/views/settings/license_whitelists/show.html.erb
@@ -40,7 +40,7 @@
               </td>
               <td>
                 <input id="name" name="name" type="hidden" value="<%= license.name.to_s %>" />
-                <%= license.name %>
+                <%= license.name_substitute %>
               </td>
             </tr>
             <% end %>
