--- a/app/views/user/projects/_project_settings.html.erb
+++ b/app/views/user/projects/_project_settings.html.erb
@@ -42,7 +42,7 @@
         <div class="controls" style="margin-left: 0px;">
           <select name="visibility" >
             <option value="private"  <%= "selected" if !@project.public %> >Private</option>
-            <option value="public"   <%= "selected" if @project.public %> >Public</option>
+            <option value="public"   <%= "selected" if  @project.public %> >Public</option>
           </select> <button type="submit" class="btn btn-primary" >Save</button>
         </div>
       </div>
@@ -58,6 +58,22 @@
           <select name="notify" >
             <option value="notify"  <%= @project.notify_after_api_update.to_s.eql?('true')  ? 'selected' : '' %> >Notify after update via API</option>
             <option value="silent"  <%= @project.notify_after_api_update.to_s.eql?('false') ? 'selected' : '' %> >Stay silent</option>
+          </select> <button type="submit" class="btn btn-primary" >Save</button>
+        </div>
+      </div>
+    </form>
+
+    <form action="<%= save_whitelist_user_project_path(@project) %>" method="post" class="form-horizontal" >
+      <div>
+        Choose a License Whitelist we should check against your dependencies. If a dependency has a license which is not on your Whitelist we will mark it red and send you notifications.
+      </div>
+      <div class="control-group">
+        <div class="controls" style="margin-left: 0px;">
+          <select name="whitelist" >
+            <option value="none"  <%= @project.license_whitelist == nil ? 'selected' : '' %> >Don't check</option>
+            <% @whitelists.each do |list| %>
+              <option value="<%= list.name %>" <%= @project.license_whitelist.to_s.eql?(list.name) ? 'selected' : '' %> ><%= list.name %></option>
+            <% end %>
           </select> <button type="submit" class="btn btn-primary" >Save</button>
         </div>
       </div>
