Add License Whitelist picker to license view.

--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -150,6 +150,8 @@
               <% end %>
             <% end %>
 
+            <%= render "user/projects/helpers/license_whitelist_picker" %>
+
             <%= render :partial => "shared/product_license_table", :locals => {:products => products, :width => "615"} %>
 
             <% if (@project.source.eql?(Project::A_SOURCE_URL) && !@project.url.to_s.empty? && @project.url.match(/\.lock$/).nil?) ||
