--- a/app/views/shared/_product_license_table.html.erb
+++ b/app/views/shared/_product_license_table.html.erb
@@ -17,7 +17,7 @@
         <% license_hash[license.name_substitute] << product if !product.nil?  %>
 
         <% whitelist_class = '' %>
-        <% if @project && @project.license_whitelist_id %>
+        <% if @project && @project.license_whitelist %>
           <% whitelist_class = 'error' %>
           <% whitelist_class = 'success' if @project.license_whitelist.include_license_substitute?( license.name_substitute ) %>
         <% end %>
@@ -25,11 +25,7 @@
         <tr class="<%= sep_class %> <%= whitelist_class %> ">
           <td><a class="#a dep_link" href="<%= product_version_path( product, product.version ) %>" ><%= product.name %></a></td>
           <td>
-            <% if license.link && !license.link.empty? %>
-              <a href="<%= license.link %> "><%= license.name_substitute %> </a>
-            <% else %>
-              <%= license.name_substitute %>
-            <% end %>
+            <%= render :partial => "shared/license_name", :locals => {:license => license } %>
           </td>
         </tr>
         <% sep_class = "" %>
