--- a/app/views/user/projects/helpers/_license_whitelist_picker.html.erb
+++ b/app/views/user/projects/helpers/_license_whitelist_picker.html.erb
@@ -1,17 +1,19 @@
 
-    <form action="<%= save_whitelist_user_project_path(@project) %>" method="post" class="form-horizontal" >
-      <div>
-        Choose a License Whitelist we should check against your dependencies.
-        If a dependency has a license which is not on your Whitelist we will mark it red and send you notifications.
+<% if @whitelists %>
+  <form action="<%= save_whitelist_user_project_path(@project) %>" method="post" class="form-horizontal" >
+    <div>
+      Choose a License Whitelist we should check against your dependencies.
+      If a dependency has a license which is not on your Whitelist we will mark it red and send you notifications.
+    </div>
+    <div class="control-group">
+      <div class="controls" style="margin-left: 0px;">
+        <select name="whitelist" >
+          <option value="none"  <%= @project.license_whitelist == nil ? 'selected' : '' %> >Don't check</option>
+          <% @whitelists.each do |list| %>
+            <option value="<%= list.name %>" <%= @project.license_whitelist.to_s.eql?(list.name) ? 'selected' : '' %> ><%= list.name %></option>
+          <% end %>
+        </select> <button type="submit" class="btn btn-primary" >Save</button> <button type="button" onclick="window.location.href='/settings/license_whitelists'" class="btn btn-success" >Manage Whitelists</button>
       </div>
-      <div class="control-group">
-        <div class="controls" style="margin-left: 0px;">
-          <select name="whitelist" >
-            <option value="none"  <%= @project.license_whitelist == nil ? 'selected' : '' %> >Don't check</option>
-            <% @whitelists.each do |list| %>
-              <option value="<%= list.name %>" <%= @project.license_whitelist.to_s.eql?(list.name) ? 'selected' : '' %> ><%= list.name %></option>
-            <% end %>
-          </select> <button type="submit" class="btn btn-primary" >Save</button> <button type="button" onclick="window.location.href='/settings/license_whitelists'" class="btn btn-success" >Manage Whitelists</button>
-        </div>
-      </div>
-    </form>
+    </div>
+  </form>
+<% end %>
