--- a/app/views/settings/license_whitelists/show.html.erb
+++ b/app/views/settings/license_whitelists/show.html.erb
@@ -11,6 +11,10 @@
 
   <div class="span8 content" >
 
+    <p>
+      Just start typing and add as many licenses to your whitelist as you want.
+    </p>
+
     <%= form_tag(settings_license_whitelists_add_path(:list => @license_whitelist.name), :class => 'form-horizontal') do %>
 
       <div class="input-append">
