--- a/app/views/products/helpers/_support_for_packagemanagers.html.erb
+++ b/app/views/products/helpers/_support_for_packagemanagers.html.erb
@@ -9,7 +9,8 @@
       <a href="http://bundler.io/">Bundler</a>, <a href="https://pypi.python.org/pypi/pip/">PIP</a>,
       <a href="https://www.npmjs.org/">NPM</a>, <a href="http://bower.io/">Bower</a>,
       <a href="http://leiningen.org/">Leiningen</a>, <a href="http://cocoapods.org/">CocoaPods</a>,
-      <a href="http://maven.apache.org/">Maven</a> and <a href="http://www.gradleware.com/">Gradle</a>.
+      <a href="http://maven.apache.org/">Maven</a>, <a href="http://www.scala-sbt.org/">SBT</a>
+      and <a href="http://www.gradleware.com/">Gradle</a>.
     </p>
 
     <div class="row l_padding_top">
@@ -17,7 +18,7 @@
         <a href="/java"><span class = "icon_java on"></span></a>
       </div>
       <div class="span9">
-        <h5 class="integration_header"> JVM - Maven / Gradle / Ivy </h5>
+        <h5 class="integration_header"> JVM - Maven / Gradle / SBT / Lein / Ivy </h5>
         <p >
           For Java we support <a href="http://maven.apache.org/">Maven</a> of course!
           If your project has only one pom.xml file then it works fine with our GitHub/Bitbucket
