--- a/app/views/user/projects/helpers/_create_from_upload.html.erb
+++ b/app/views/user/projects/helpers/_create_from_upload.html.erb
@@ -2,7 +2,7 @@
 <div style="padding-bottom: 20px;">
   <b>Creating a new project can take a couple of seconds. Please be patient.</b>
   <br/><br/>
-  Supported files are pom.xml, dependency.gradle,
+  Supported files are pom.xml, dependency.gradle, build.sbt,
   Gemfile, Gemfile.lock,
   requirements.txt, setup.py,
   package.json, composer.json, composer.lock, Podfile, Podfile.lock and project.clj
