Add CSS for the API

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -861,3 +861,10 @@ img.centered {
 .description{
   padding: 0 0 15px 0;
 }
+
+/* used by the api *
+.api_module_item{
+  padding-bottom: 10px;
+  padding-top: 10px;
+  border-bottom: 1px dotted gray;
+}
