--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -862,7 +862,7 @@ img.centered {
   padding: 0 0 15px 0;
 }
 
-/* used by the api *
+/* used by the api */
 .api_module_item{
   padding-bottom: 10px;
   padding-top: 10px;
