--- a/app/views/services/pricing.html.erb
+++ b/app/views/services/pricing.html.erb
@@ -72,7 +72,7 @@
 
 <div class = "col2-left col2-right">
   <p style="margin-bottom: 45px; font-size: 18px;">
-    We're also offering bigger plans and an on-premise version of VersionEye. <br/>
+    We're also offering bigger plans and an on-premises version of VersionEye. <br/>
     For any questions, contact us at <a href="mailto:support@versioneye.com">support@versioneye.com</a>!
   </p>
 </div>
