Make CocoaPods crawl schedule configurable

--- a/app/views/settings/globalsettings/index_cocoapods.html.erb
+++ b/app/views/settings/globalsettings/index_cocoapods.html.erb
@@ -51,6 +51,20 @@
         </div>
       </div>
 
+      <hr/>
+
+      <p class="description">
+        At which time should this be crawled? Use a <a href="https://en.wikipedia.org/wiki/Cron#CRON_expression" target="_Cron">cron expression</a>. For example '11 2 * * *' for every day at 2:11 AM.
+        If the field is empty it will not be crawled.
+      </p>
+
+      <div class="control-group">
+        <%= label_tag :cocoapods_schedule, "Schedule", :class => "control-label", :for => "cocoapods_schedule" %>
+        <div class="controls">
+          <%= text_field_tag :cocoapods_schedule, @globalsetting['cocoapods_schedule'], :id => "cocoapods_schedule" %>
+        </div>
+      </div>
+
 
       <div class="control-group">
         <div class="control-label"></div>
