Update cocoapods settings page

--- a/app/views/settings/globalsettings/index_cocoapods.html.erb
+++ b/app/views/settings/globalsettings/index_cocoapods.html.erb
@@ -54,7 +54,7 @@
       <hr/>
 
       <p class="description">
-        At which time should this be crawled? Use a <a href="https://en.wikipedia.org/wiki/Cron#CRON_expression" target="_Cron">cron expression</a>. For example '11 2 * * *' for every day at 2:11 AM.
+        At which time should this be crawled? Use a <a href="https://en.wikipedia.org/wiki/Cron#CRON_expression" target="_Cron">cron expression</a>. For example <b>11 2 * * *</b> for every day at 2:11 AM.
         If the field is empty it will not be crawled.
       </p>
 
