--- a/app/views/settings/globalsettings/index_cocoapods.html.erb
+++ b/app/views/settings/globalsettings/index_cocoapods.html.erb
@@ -14,7 +14,8 @@
     <%= form_tag( settings_cocoapods_path, :method => "post", :class => "form-horizontal") do  %>
 
       <p class="description">
-        Where do you host your primary private CocoaPods?
+        <a href="http://cocoapods.org">CocoaPods</a> is the dependency manager for Objective-C projects.<br/>
+        Where do you host your primary <a href="http://cocoapods.org">CocoaPods</a> Repository?
       </p>
 
       <div class="control-group">
@@ -34,7 +35,7 @@
       <hr/>
 
       <p class="description">
-        Do you have a secondary CocoaPods?
+        Do you have a secondary CocoaPods Repository?
       </p>
 
       <div class="control-group">
