--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -4,15 +4,17 @@
 
   <% if signed_in_admin? %>
     <li><%= link_to 'Profile'            , settings_profile_path %></li>
-    <li><%= link_to 'E-Mail Settings'    , settings_emailsettings_path %></li>
     <li><%= link_to 'Global Settings'    , settings_globalsettings_path %></li>
-    <li><%= link_to 'GitHub Settings'    , settings_githubsettings_path %></li>
-    <li><%= link_to 'CocoaPods Specs'    , settings_cocoapods_path %></li>
-    <li><%= link_to 'Sonatype Nexus'     , settings_nexussettings_path %></li>
-    <li><%= link_to 'E-Mails'            , settings_emails_path %></li>
-    <li><%= link_to 'License Whitelists' , settings_license_whitelists_path %></li>
-    <li><%= link_to 'Connect'            , settings_connect_path %></li>
+    <li><%= link_to 'SMTP Settings'      , settings_emailsettings_path %></li>
+    <li><%= link_to 'Email Addresses'   , settings_emails_path %></li>
     <li><%= link_to 'Password'           , settings_password_path %></li>
+    <li><%= link_to 'Connect'            , settings_connect_path %></li>
+    <li><%= link_to 'License Whitelists' , settings_license_whitelists_path %></li>
+    <hr/>
+    <li><%= link_to 'Maven Repository'   , settings_mvnrepos_path %></li>
+    <li><%= link_to 'CocoaPods Specs'    , settings_cocoapods_path %></li>
+    <hr/>
+    <li><%= link_to 'GitHub Settings'    , settings_githubsettings_path %></li>
   <% else %>
     <li><%= link_to 'Profile'            , settings_profile_path %></li>
     <li><%= link_to 'Links'              , settings_links_path %></li>
