Make Scheduler configurable

--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -15,6 +15,8 @@
     <li><%= link_to 'CocoaPods Specs'    , settings_cocoapods_path %></li>
     <hr/>
     <li><%= link_to 'GitHub Settings'    , settings_githubsettings_path %></li>
+    <hr/>
+    <li><%= link_to 'Scheduler'          , settings_scheduler_path %></li>
   <% else %>
     <li><%= link_to 'Profile'            , settings_profile_path %></li>
     <li><%= link_to 'Links'              , settings_links_path %></li>
