#558 build stash form for admin'

--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -15,6 +15,7 @@
     <li><%= link_to 'CocoaPods Specs'    , settings_cocoapods_path %></li>
     <hr/>
     <li><%= link_to 'GitHub Settings'    , settings_githubsettings_path %></li>
+    <li><%= link_to 'Stash Settings'     , settings_stashsettings_path %></li>
     <hr/>
     <li><%= link_to 'Scheduler'          , settings_scheduler_path %></li>
   <% else %>
