--- a/app/views/settings/globalsettings/index_github.html.erb
+++ b/app/views/settings/globalsettings/index_github.html.erb
@@ -14,7 +14,7 @@
     <%= form_tag( settings_githubsettings_path, :method => "post", :class => "form-horizontal") do  %>
 
       <p class="description">
-        If you are using GitHub Enterprise you can configure it here.
+        If you are using <a href="https://enterprise.github.com/">GitHub Enterprise</a> you can configure it here.
       </p>
 
       <div class="control-group">
