--- a/app/views/layouts/_html_head.html.erb
+++ b/app/views/layouts/_html_head.html.erb
@@ -19,6 +19,7 @@
 
 
     <% if params[:controller] == 'user/github_repos' ||
+          params[:controller] == 'user/stash_repos' ||
           params[:controller] == 'user/bitbucket_repos'  %>
       <%= javascript_include_tag "application_scm",  :defer => false, :async => false %>
     <% end %>
