--- a/app/views/user/stash_repos/init.html.erb
+++ b/app/views/user/stash_repos/init.html.erb
@@ -9,7 +9,7 @@
 
   <div class="span8">
     <div class="row content_header_def" >
-      Connect with Stash to monitor your Bitbucket Repositories.
+      Connect with Stash to monitor your Stash Repositories.
     </div>
     <div class="content " >
       <%= render 'shared/connect_with_bitbucket', :btn => "signup" %>
